<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.Taskly.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_loginFragment"
            app:destination="@id/loginFragment" />
        <action
            android:id="@+id/action_navigation_home_to_settingsFragment"
            app:destination="@id/navigation_settings" />
        <action
            android:id="@+id/action_navigation_home_to_projectDetailsFragment"
            app:destination="@id/projectDetailsFragment" />
    </fragment>

    <fragment
        android:id="@+id/projectDetailsFragment"
        android:name="com.example.Taskly.ui.projects.ProjectDetailsFragment"
        android:label="Project Details"
        tools:layout="@layout/fragment_project_details">
        <argument
            android:name="projectId"
            app:argType="integer" />
        <argument
            android:name="projectName"
            app:argType="string" />
        <argument
            android:name="projectIconName"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/navigation_today"
        android:name="com.example.Taskly.ui.today.TodayFragment"
        android:label="@string/title_today"
        tools:layout="@layout/fragment_today" />

    <fragment
        android:id="@+id/navigation_calendar"
        android:name="com.example.Taskly.ui.calendar.CalendarFragment"
        android:label="@string/title_calendar"
        tools:layout="@layout/fragment_calendar" />

    <fragment
        android:id="@+id/navigation_mail"
        android:name="com.example.Taskly.ui.mail.MailFragment"
        android:label="@string/title_mail"
        tools:layout="@layout/fragment_mail" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.Taskly.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.example.Taskly.ui.login.LoginFragment"
        android:label="Login"
        tools:layout="@layout/fragment_login" >
        <action
            android:id="@+id/action_loginFragment_to_registerFragment"
            app:destination="@id/registerFragment" />
    </fragment>

    <fragment
        android:id="@+id/registerFragment"
        android:name="com.example.Taskly.ui.login.RegisterFragment"
        android:label="Register"
        tools:layout="@layout/fragment_register" />

</navigation>